--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <header>
+  <head>
   
     <title>Semantic Containers Lab</title>
-  </header>
+  </head>
 <body>
 
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
