Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <header>
-<head>
-    <title>Semantic Containers Lab</title></head>
+
+    <title>Semantic Containers Lab</title>
   </header>
 <body>
 
