--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <header>
+    <head> 
     <title>Semantic Containers Lab</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  </head>
+  
   </header>
 
 <body>
