--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </address>
 
       <details>
-        <span>&copy; 2014 Exceptional Realty.</span>
+        <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
       </details>
 
