--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <header>
-    <title>Semantic Containers Lab</title>
+  
   </header>
-
+<head>
+    <title>Semantic Containers Lab</title>
+</head>
 <body>
 
     <nav>
